objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Food__c</fullName>
        <label>Food</label>
        <referenceTo>Food__c</referenceTo>
        <relationshipLabel>Review</relationshipLabel>
        <relationshipName>Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <label>Review</label>
        <type>TextArea</type>
    </fields>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>